--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
-    "mongoose-sequence": "^6.0.1"
+    "mongoose-sequence": "^6.0.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
