--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "mongoose-sequence": "^6.0.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
